--- a/lib/assets/theme/ctcl/designTokens/components.scss
+++ b/lib/assets/theme/ctcl/designTokens/components.scss
@@ -30,7 +30,7 @@
   --gf-menu-link-active-text-color: #4B4C53;
 
   //Global Navigation
-  --gn-background-color: rgb(255, 0, 0);
+  --gn-background-color: #2F345A;
   --gn-menu-desktop-font-size: 16px;
   --gn-menu-desktop-font-weight: 400;
   --gn-menu-desktop-line-height: 22.4px;
