--- a/lib/assets/theme/ctcl/designTokens/components.scss
+++ b/lib/assets/theme/ctcl/designTokens/components.scss
@@ -105,15 +105,15 @@
   --modal-tertiary-btn-active-bgcolor: #F5F5F6;
 
   //Toastbar
-  --tb-text-color: #fff;
+  --tb-text-color: #2F345A;
   --tb-font-size: 16px;
   --tb-font-weight:  200;
   --tb-line-height: 24px;
-  --tb-bgcolor: #4b4c53;
-  --tb-link-color: #fff;
-  --tb-link-color-hover: #fff;
-  --tb-link-color-active: #fff;
-  --tb-link-bgcolor-active: #4b4c53;
+  --tb-bgcolor: #F5F5F6;
+  --tb-link-color: #2F345A;
+  --tb-link-color-hover: #f62900;
+  --tb-link-color-active: #2F345A;
+  --tb-link-bgcolor-active: #F5F5F6;
   
   //Hero Header
   --hh-font-size: 24px;
