--- a/lib/assets/theme/ctcl/designTokens/components.scss
+++ b/lib/assets/theme/ctcl/designTokens/components.scss
@@ -34,11 +34,11 @@
   --gn-menu-desktop-font-size: 16px;
   --gn-menu-desktop-font-weight: 400;
   --gn-menu-desktop-line-height: 22.4px;
-  --gn-menu-desktop-text-color: #4B4C53;
-  --gn-menu-desktop-hover-text-color: #4B4C53;
-  --gn-menu-desktop-active-text-color: #4B4C53;
+  --gn-menu-desktop-text-color: #ffffff;
+  --gn-menu-desktop-hover-text-color: #ffffff;
+  --gn-menu-desktop-active-text-color: #ffffff;
   --gn-menu-desktop-active-bgcolor: transparent;
-  --gn-menu-desktop-selected-bgcolor: #4B4C53;
+  --gn-menu-desktop-selected-bgcolor: #2F345A;
   --gn-menu-desktop-selected-text-color: #fff;
   --gn-menu-desktop-selected-hover-text-color: #fff;
   --gn-menu-desktop-selected-active-text-color: #fff;
