Fix Footer Alignement
Fix Footer Alignment

--- a/lib/components/globalFooter/GlobalFooter.module.scss
+++ b/lib/components/globalFooter/GlobalFooter.module.scss
@@ -1,8 +1,7 @@
 @import "../../assets/styles/global.scss";
 
 .footer {
-    width: 100%;
-    margin: 30px 0;
+    margin: 30px;
     font-family: var(--base-font-family);
     font-size: var(--gf-font-size, 14px);
     font-weight: var(--gf-font-weight, 300);
