Burger Menu - Icon Colour

--- a/lib/assets/theme/ctcl/designTokens/components.scss
+++ b/lib/assets/theme/ctcl/designTokens/components.scss
@@ -52,8 +52,8 @@
   --gn-menu-desktop-subnav-active-text-color: #fff;
   --gn-menu-desktop-subnav-active-bgcolor: transparent;
   --gn-menu-desktop-fixed-bgcolor: #fff;
-  --gn-menu-hamburger-icon-color: #4B4C53;
-  --gn-menu-hamburger-icon-color-hover: #6267A1;
+  --gn-menu-hamburger-icon-color: #ffffff;
+  --gn-menu-hamburger-icon-color-hover: #ffffff;
   --gn-menu-slideout-bgcolor: 75, 76, 83;
   --gn-menu-slideout-menu-bgcolor: #fff;
   --gn-menu-slideout-icon-close-font-size: 24px;
