--- a/lib/components/globalNavigation/GlobalNavigation.module.scss
+++ b/lib/components/globalNavigation/GlobalNavigation.module.scss
@@ -63,6 +63,7 @@
       display: block;
       justify-self: end;
       cursor: pointer;
+      margin-right:25px;
       svg {
           vertical-align: middle;
 
