--- a/lib/components/heroHeader/HeroHeader.module.scss
+++ b/lib/components/heroHeader/HeroHeader.module.scss
@@ -58,8 +58,10 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  overflow: hidden;   
-  
+  overflow: hidden;
+  z-index: 0;
+  --mv-poster-border-radius: var(--hh-bgvideo-radius, 0);
+
   img {
     z-index: 0;
     width: 100%;
@@ -84,7 +86,7 @@
       width: 100%;
       height: 100vh;
       object-fit: cover;
-      
+      border-radius: var(--hh-bgvideo-radius, 0);
       opacity: var(--hh-bgvideo-opacity, 0.7);
       min-height: 100%;
       
@@ -181,6 +183,7 @@
     grid-area: c;
     text-align: left;
     margin: auto;
+    z-index: 1;
 
     h1, h2, h3, h4, h5, h6 {
       color: var(--hh-sidemedia-title-text-color, #fff);
@@ -345,4 +348,4 @@
       fill: var(--hh-tertiary-btn-text-color, var(--tertiary-btn-text-color));
     }
   }
-}  
+}
